# Negame

./: .clang-tidy  .gitignore  .yamllint  README.md
.github/workflows/: code-quality.yml
cmake/modules/: CMakeUtils.cmake  Dependencies.cmake  Findlibpqxx.cmake  ProtoCompile.cmake  StaticAnalysis.cmake
include/core/: error_handler.hpp  logger.hpp
services/Gameworld/: CMakeLists.txt
services/Gameworld/cmake/modules/: Dependencies.cmake  FindgRPC.cmake  Findlibpqxx.cmake  ProtoCompile.cmake  StaticAnalysis.cmake
services/Gameworld/config/: config.json
services/Gameworld/include/core/: application.hpp  config.hpp.in  config_handler.hpp  error_handler.hpp  logger.hpp  utils.hpp
services/Gameworld/include/database/: celestial_object_repository.hpp  celestial_object_repository_impl.hpp  connection_pool.hpp  database.hpp  repository_base.hpp
services/Gameworld/include/network/: grpc_server.hpp
services/Gameworld/include/service/: gameworld_service.hpp
services/Gameworld/proto/: CMakeLists.txt
services/Gameworld/proto/v1/: gameworld.proto
services/Gameworld/scripts/: gameworld-build.sh
services/Gameworld/src/: CMakeLists.txt  main.cpp
services/Gameworld/src/core/: application.cpp
services/Gameworld/src/database/: celestial_object_repository_impl.cpp  connection_pool.cpp  database.cpp
services/Gameworld/src/network/: grpc_server.cpp
services/Gameworld/src/service/: gameworld_service.cpp
